k8s/mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-deployment
  template:
    metadata:
      labels:
        app: mysql-deployment
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.23
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: test
  labels:
    app: mysql-deployment
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql-port
  selector:
    app: mysql-deployment
  type: ClusterIP
